mongo-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo-deployment
  namespace: default
  labels:
    app:  mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
#  strategy:
#    rollingUpdate:
#      maxSurge: 25%
#      maxUnavailable: 25%
#    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  mongodb
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  mongo-db
        image:  mongo
        ports:
        - containerPort: 27017
