mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mongo-express
  namespace: default
  labels:
    app:  mongo-express
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 1
  template:
    metadata:
      labels:
        app:  mongo-express
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  mongo-express
        image:  mongo-express
        ports:
        - containerPort: 8081
