mongo-express-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-external-service
  namespace: default
spec:
  selector:
    app: mongo-express
  type: loadBalancer
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    NodePort: 30000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
