ingress-multiple-path-same-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multiple-path-same-host
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - path: /analytics
        backend:
          serviceName: analytics-service
          servicePort: 5000
      - path: /shopping
        backend:
          serviceName: shopping-service
          servicePort: 4000
