ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  namespace: default
spec:
  tls: 
  - hosts:
    - myapp.com
    secretName: my-app-secret-tls
  rules:
  - host: myapp.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-app-internal-service
          servicePort: 8000
